--- a/app/sass/theme/fancify.scss
+++ b/app/sass/theme/fancify.scss
@@ -174,11 +174,7 @@ input.ng-invalid {
         @include transition(opacity $animate-std-cubic .4s, max-height linear .3s);
 
         &.expand {
-            max-height: 500px;
-        }
-
-        li.cl > div {
-            @include transition(opacity linear .2s, margin-top linear .2s .1s);
+            max-height: 1000px;
         }
     }
 }
